--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <!--BookDetils-->
     <string name="book_author">作者：</string>
     <string name="book_press">出版社：</string>
-    <string name="book_subtitle">副标题：</string>
+    <string name="book_loc">图书位置：</string>
     <string name="book_pages">页数：</string>
     <string name="book_actor_info">作者简介</string>
     <string name="book_list">目录/试读</string>
