--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,8 @@
     <string name="collection_cancel_fail">取消收藏失败!</string>
     <string name="book_detail_borrow">借阅</string>
     <string name="title_activity_login">Sign in</string>
-    <string name="like_success">点赞成功!</string>
-    <string name="like_fail">点赞失败!</string>
+    <string name="like_success">想看成功!</string>
+    <string name="like_fail">想看失败!</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
