--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_menu_historyList">历史借阅</string>
     <string name="nav_menu_Collection">我的收藏</string>
     <string name="nav_menu_tag">标签分类</string>
-    <string name="nav_menu_like">想看列表</string>
+    <string name="nav_menu_like">我的想看</string>
     <string name="nav_menu_system">系统</string>
     <string name="nav_menu_ChangeSection">更改标签</string>
     <string name="nav_menu_Settings">设置</string>
